--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -70,9 +70,9 @@
     "H=\\sum_i^N {H_i}\n",
     "$$\n",
     "\n",
-    "where each term $H_i$ acts on one of the $N$ local subsystems (like a single particle or a small group of particles) of the total Hamiltonian $H$. In the case of indistinguishable elementary particles, it is important to determine whether the system involves fermions or bosons, where fermions obey the Pauli Exclusion Principle, meaning no two identical fermions can occupy the same quantum states like electrons. Unlike fermions, multiple bosons can exist in the same quantum state, and these difference affects the system's statistics and how it must be modeled. \n",
+    "where each term $H_i$ acts on one of the $N$ local subsystems (like a single particle or a small group of particles) of the total Hamiltonian $H$. In the case of indistinguishable elementary particles, it is important to determine whether the system involves fermions or bosons, where fermions obey the Pauli Exclusion Principle, meaning no two identical fermions can occupy the same quantum states like electrons. Unlike fermions, multiple bosons can exist in the same quantum state, and these difference affects the system's statistics and how it must be modeled.\n",
     "\n",
-    "In practice, people are often interested in physical systems in which the elements are presumed to be well-separated or labeled, and thus distinguishable, as in spins on a lattice. \n",
+    "In practice, people are often interested in physical systems in which the elements are presumed to be well-separated or labeled, and thus distinguishable, as in spins on a lattice.\n",
     "\n",
     "![A lattice with spins and a molecule which is bonded together using electrons which are fermions.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/spins-fermions.svg)\n",
     "\n",
@@ -92,14 +92,14 @@
     "\n",
     "If you have a system with distinguishable particles, like $1/2$ spins fixed on a lattice, which we took a simple look at above, the Hamiltonian is often already written in a language compatible with qubits. The Pauli-Z operator, for instance, naturally describes a spin's up or down, and no special encoding is needed.\n",
     "\n",
-    "When simulating indistinguishable particles of fermions or bosons, it is necessary to apply an encoding transformation. These particles are used to describe within a special mathematical framework called `second quantization`, which tracks the occupation number of each quantum state by introducing `creation` and `annihilation` operators, where the creation operator $\\hat{a}_i^\\dagger$ adds one particle to state $i$ while the annihilation operator $\\hat{a}_i$ removes one particle from state $i$. Based on this second quantization framework, the fermion can be transformed by Bravyi-Kitaev and Jordan-Wigner. Jordan-Wigner transformation defines the fermionic creation operator \n",
+    "When simulating indistinguishable particles of fermions or bosons, it is necessary to apply an encoding transformation. These particles are used to describe within a special mathematical framework called `second quantization`, which tracks the occupation number of each quantum state by introducing `creation` and `annihilation` operators, where the creation operator $\\hat{a}_i^\\dagger$ adds one particle to state $i$ while the annihilation operator $\\hat{a}_i$ removes one particle from state $i$. Based on this second quantization framework, the fermion can be transformed by Bravyi-Kitaev and Jordan-Wigner. Jordan-Wigner transformation defines the fermionic creation operator\n",
     "$\\hat{f}_j^\\dagger = \\Bigl( \\prod\\limits_{k \\lt j}{(-Z_k)} \\Bigr)\\Bigl( \\frac{X_j + i Y_j}{2} \\Bigr)$ which fill the $j$-th quantum state with a fermion and fermionic annihilation operator $\\hat{f}_j= \\Bigl( \\prod\\limits_{k \\lt j}{(-Z_k)} \\Bigr)\\Bigl( \\frac{X_j - i Y_j}{2} \\Bigr)$ which empties a fermion from the $j$=th states. You can find more details of this Jordan-Wigner transformation at our [Quantum Computing in Practice, episode 5 - Mapping](https://quantum.cloud.ibm.com/learning/en/courses/quantum-computing-in-practice/mapping). Similarly, bosons also require their own encoding methods, such as the Holstein-Primakoff transformation, to be represented by qubits.\n",
     "\n",
     "Ultimately, whether the path is direct or requires a translation, the goal is the same: to express the system's Hamiltonian in the form of Pauli spin operators that a quantum computer can understand and execute.\n",
     "\n",
     "__3. State preparation__\n",
     "\n",
-    "After encoding the desired Hamiltonian into the quantum computer's gate set, the next important step is to select an appropriate initial quantum state to begin the simulation. The choice of initial state influences not only the convergence of variational algorithms such as the Variational Quantum Eigensolver (VQE) but also affects the accuracy and efficiency of time evolution and sampling. Essentially, the initial state serves as the starting point for the computation, laying the groundwork for extracting useful observables from the quantum system being modeled. Ideally, this state should represent a physically meaningful configuration of the system under study. \n",
+    "After encoding the desired Hamiltonian into the quantum computer's gate set, the next important step is to select an appropriate initial quantum state to begin the simulation. The choice of initial state influences not only the convergence of variational algorithms such as the Variational Quantum Eigensolver (VQE) but also affects the accuracy and efficiency of time evolution and sampling. Essentially, the initial state serves as the starting point for the computation, laying the groundwork for extracting useful observables from the quantum system being modeled. Ideally, this state should represent a physically meaningful configuration of the system under study.\n",
     "\n",
     "For many quantum chemistry simulations, the Hartree-Fock state can be a good starting point. In the language of second quantization, Hartree-Fock state ($|\\phi\\rangle_{HF}$) is created by applying creation operators ($\\hat{a}_i^\\dagger$) for each of the lowest-energy orbitals to the vacuum state($|vac\\rangle = |0_1 ... 0_k ... 0_N\\rangle = |0\\rangle ^{\\otimes N}$), a state with no electrons.\n",
     "$$\n",
@@ -157,8 +157,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Here $N$ is the number of non-commuting terms $H_j$ in the Hamiltonian to be broken up in this way, and $n$ is the number of small time steps into which this evolution is broken. Note the reverse order of operators in the second product in the second-order treatment. We won't go deeper into the details of trotterization, but please visit the section on trotterization in the course [Quantum Diagonalization Algorithms](https://quantum.cloud.ibm.com/learning/en/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) for more details.\n",
-    "\n"
+    "Here $N$ is the number of non-commuting terms $H_j$ in the Hamiltonian to be broken up in this way, and $n$ is the number of small time steps into which this evolution is broken. Note the reverse order of operators in the second product in the second-order treatment. We won't go deeper into the details of trotterization, but please visit the section on trotterization in the course [Quantum Diagonalization Algorithms](https://quantum.cloud.ibm.com/learning/en/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) for more details."
    ]
   },
   {
@@ -367,7 +366,7 @@
  "metadata": {
   "description": "A review of methods in simulating natural systems as was done in the 2023 utility paper.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3"
   },
   "title": "Simulating nature",
   "widgets": {
