--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -31,7 +31,7 @@ It is the responsibility of IBM Quantum employees and IBM Quantum leadership ali
 
 IBM Quantum is building a global quantum computing ecosystem. It is our responsibility to create an ecosystem that represents the diversity of the world at large, and be inclusive of people of all backgrounds, experiences, and abilities.
 
-For more details, see the section on Responsible Use of IBM Quantum technology and services in the [Qiskit Runtime Service Description](https://www.ibm.com/support/customer/csol/terms/?id=i126-9425), as well as the section on Acceptable Use Terms in the IBM [Cloud Services Agreement](https://www.ibm.com/support/customer/csol/terms/?id=Z126-6304), both on the IBM Terms site.
+For more details, see the section on Responsible Use of IBM Quantum technology and services in the [Qiskit Runtime Service Description](https://www.ibm.com/support/customer/csol/terms/?id=i126-9425), as well as the section on Acceptable Use Terms in the [Cloud Services Agreement](https://www.ibm.com/support/customer/csol/terms/?id=Z126-6304), both on the IBM Terms site.
 
 Finally, as part of our responsible quantum effort, we are committed to fostering a welcoming community of users, both online and at in-person engagements. Please familiarize yourself with the [Qiskit Code of Conduct](/docs/open-source/code-of-conduct) and its [enforcement procedures](/docs/open-source/code-of-conduct#responsibilities-enforcement).
 
